# fRAGme

./: .buildinfo  .dockerignore  .env  .gitignore  .pypirc  Dockerfile  LICENSE  README.md  classes.html  docker-compose.yml  docker.html  entrypoint.sh  environment.html  genindex.html  index.html  install.html  objects.inv  pyproject.toml  search.html  searchindex.js  sitemap.xml  usage.html
.doctrees/: classes.doctree  docker.doctree  environment.doctree  environment.pickle  index.doctree  install.doctree  usage.doctree
.github/workflows/: publish.yml  publish_docs.yml  push_docker.yml  push_docker_release.yml
_sources/: classes.rst.txt  docker.rst.txt  environment.rst.txt  index.rst.txt  install.rst.txt  usage.rst.txt
_static/css/: custom.css
data/tmp/: fake_db.json
docs/: classes.rst  conf.py  docker.rst  environment.rst  requirements.txt  spelling_wordlist.txt  usage.rst
docs/_templates/: class.rst  class_with_call.rst  function.rst
src/fRAGme/: __init__.py  app.py
src/fRAGme/api/v1/: auth.py  cmd.py  data.py
src/fRAGme/models/v1/: auth.py  cmd.py  data.py
src/fRAGme/util/: auth.py
src/fRAGme/util/v1/: auth.py  chroma_handler.py
